<resources>
    <string name="app_name">NutritionApp</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="add">ADD</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="food_name">Food name</string>
    <string name="enter_consumed_food">Enter consumed food</string>
    <string name="calories_per_100g">Calories per 100g</string>
    <string name="enter_calories">Enter calories</string>
    <string name="grams_of_food_consumed">Grams of food consumed</string>
    <string name="grams">Grams</string>
    <string name="add_calories">Add calories</string>
    <string name="weight">Weight (KG)</string>
    <string name="height">Height (CM)</string>
    <string name="gender">Gender</string>
    <string name="calorie_limit">Calorie limit</string>
    <string name="change_your_parameters">Change your parameters</string>
    <string name="set">SET</string>
    <string name="enter_your_calorie_limit">Enter your calorie limit</string>
    <string name="enter_your_gender">Enter your gender</string>
    <string name="enter_your_current_height">Enter your current height (CM)</string>
    <string name="enter_your_current_weight">Enter your current weight (KG)</string>
    <string name="not_set">Not set</string>
    <string name="profile_information">Profile information</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="weight_history">Weight history</string>
    <string name="bmi">BMI</string>
    <string name="gain_loss">Gain/Loss</string>
    <string name="food_history">Food history</string>
    <string name="weekly_consumed_calories">Weekly consumed calories</string>
    <string name="no_data">No data</string>
    <string name="recent_foods">Recent foods</string>
    <string name="sign_in">SIGN IN</string>
    <string name="welcome_to_nutrition_app">Welcome to Nutrition App</string>
    <string name="an_app_that_will_help_you_track_n_your_daily_calorie_intake">An app that will help you track \n your daily calorie intake</string>
    <string name="track_your_food_with_ease">Track your food with ease</string>
</resources>