<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="249dp"
        android:layout_height="246dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:max="100"
        tools:progress="56" />


    <TextView
        android:id="@+id/calories"
        android:layout_width="132dp"
        android:layout_height="84dp"
        android:gravity="center"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/homeUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="lamo doesnt work"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"/>

    <TableLayout
        android:layout_width="413dp"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/weight"
                android:layout_width="95dp"
                android:layout_height="41dp"
                android:text="@string/bmi"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/height"
                android:layout_width="95dp"
                android:layout_height="41dp"
                android:text="@string/gain_loss"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/weightValue"
                android:layout_width="95dp"
                android:layout_height="41dp"
                android:text="@string/not_set"
                android:layout_margin="5dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/heightValue"
                android:layout_width="95dp"
                android:layout_height="41dp"
                android:text="@string/not_set"
                android:layout_margin="5dp"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>